style background and update name

--- a/assets/shotchart.css
+++ b/assets/shotchart.css
@@ -1,5 +1,5 @@
 body {
-  background: url('warriors_background_main.jpg');
+  background: linear-gradient( rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) ), url('warriors_background_main.jpg');
   background-position: center;
 
 }
